tests/files/type_checker_tests/should_pass/001.cmdr
//Should allow setting globals in functions
a = 2;
fn add(x, y) {
	a = 3;
	return x + y + a;
}