tests/files/type_checker_tests/should_fail/047.cmdr
//Should fail when trying to call something with incorrect number of parameters
add(x, y) {
	return x + y;
}
z = add(1, 2, 3);